Trying to fix footer so that it doesn't cut things on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,7 @@ footer {
     left: 0;
     bottom: 0px;
     width: 100%;
+    height: 10%;
     background-color: #B6D9EE;
     color: black;
     text-align: center;
